refactor: Refactor HttpParser request validation and path normalization
- Decode path before normalization to catch encoded transversal
- Correctly use URI to throw Bad Request - 400 immediately
- Make sure to parse the requestLine, with the amount of 3
- If the HTTP protocol is not 1.1 or 1.0 we throw not implemented
- If the HTTP version is invalid we throw 400
- Throw 400 Bad Request if header is empty
- Throw 400 Bad Request if the parser found duplicate host header
- Throw 400 Bad Request if Content-Length is invalid
- Add method for decodingPath() and use it before normalization
- Changed parseQueryParams implementation to only getting the queries without "?"
- Replace path normalization (normalizePath) with our own method as siad in issue
- Edited and added test accordingly